--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@mui/x-data-grid": "^5.0.0-beta.1",
     "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "axios": "^0.21.1",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
