--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@mui/x-date-pickers": "^5.0.0-alpha.3",
     "axios": "^0.21.1",
     "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
