--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,22 +20,28 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.7.0",
-    "@date-io/date-fns": "^2.14.0",
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@googlemaps/react-wrapper": "^1.1.0",
+    "@material-ui/core": "5.0.0-alpha.24",
+    "@material-ui/lab": "5.0.0-alpha.24",
     "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.0.0",
     "@mui/styles": "^5.0.0",
     "@mui/x-data-grid": "^5.0.0-beta.1",
-    "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "axios": "^0.21.1",
     "date-fns": "^2.28.0",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "typescript-cookie": "^1.0.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
