--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@mui/styles": "^5.0.0",
     "@mui/x-data-grid": "^5.0.0-beta.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.28.0",
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
